--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint && prettier --check  .",
+    "lint:fix": "prettier . --write && eslint --fix"
   },
   "dependencies": {
     "next": "16.0.5",
@@ -21,6 +22,8 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "3.7.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
